--- a/Prod/css/main.css
+++ b/Prod/css/main.css
@@ -14,15 +14,20 @@ body {
 }
 
 form .input-image-prepend {
-  width: 35px;
+  width: 40px;
   padding: 0px;
   margin-top: 2px;
   margin-right: 13px;
-  height: 26px;
+  height: 30px;
   border: none;
   background-color: transparent;
 }
 
 .error-message {
   color: #f9b3a2;
+}
+
+
+fieldset {
+  border: 2px solid black;
 }
