Ajout de nouvel MCD

--- a/Prod/css/administration.css
+++ b/Prod/css/administration.css
@@ -4,10 +4,15 @@
   margin-left: 40px;
 }
 
-
-
 .administration .content {
   background-color: rgba(253, 253, 253, 0.63);
   padding-bottom: 10px;
   height: fit-content;
+}
+
+@media (max-width: 764px) {
+  .administration {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
