--- a/Prod/css/main.css
+++ b/Prod/css/main.css
@@ -2,20 +2,21 @@
 FONTS
 */
 @font-face {
-  font-family: 'Satisfy';
+  font-family: "Satisfy";
   font-style: normal;
   font-weight: 400;
-  src: local('Satisfy Regular'), local('Satisfy-Regular'), url(fonts/rP2Hp2yn6lkG50LoCZOIHQ.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: local("Satisfy Regular"), local("Satisfy-Regular"),
+    url(fonts/rP2Hp2yn6lkG50LoCZOIHQ.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
-
 
 html {
   height: -webkit-fill-available;
 }
 
 body {
-  max-width: 1080px;
   margin: auto auto;
   background-image: url("../images/background-image.jpeg");
   height: 100%;
@@ -41,7 +42,6 @@ form .input-image-prepend {
   color: #f9b3a2;
 }
 
-
 fieldset {
   border: 2px solid black;
 }
@@ -54,7 +54,6 @@ fieldset {
 
 .small-input {
   height: 30px;
-
 }
 
 .small-table {
